<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Profile_frag">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
            android:id="@+id/HelloT"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/helloUser" />

            <TextView
                android:id="@+id/try1"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="hello private" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <Button
                android:id="@+id/LogOutB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/logout" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/UserProfileT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/userprofile"
            android:gravity="center"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/FirstNameT"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/firstname" />

                <TextView
                    android:id="@+id/FirstNameTPr"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="firstname private// delete" />

                <TextView
                    android:id="@+id/LastNameT"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/lastname" />
                <TextView
                    android:id="@+id/LastNameTPr"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="lastname private// delete" />

                <TextView
                    android:id="@+id/EmailT"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/EmailTPr"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="email private// delete" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/SearchingUserB"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/searchinguser" />

            <Button
                android:id="@+id/SearchingSlotB"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/searchingslot" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/BackB"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>